--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Curiosity</title>
 </head>
-<body>
+<body class="BG-DarkRed">
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Curiosity</h1>
+<p>Curiosity</p>
 
 </body>
 </html>
