--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <title>Curiosity</title>
 </head>
 <body class="BG-DarkRed">
-
+<button>
+  <span class="shadow"></span>
+  <span class="edge"></span>
+  <span class="front text"> Click me
+  </span>
+</button>
 <h1>Curiosity</h1>
 <p>Curiosity</p>
 
