--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <span class="front text"> Click me
   </span>
 </button>
-<h1>Curiosity</h1>
-<p>Curiosity</p>
+<h1 class="text">Curiosity</h1>
+<pc lass="text">Curiosity</p>
 
 </body>
 </html>
