--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </span>
 </button>
 <h1 class="text">Curiosity</h1>
-<pc lass="text">Curiosity</p>
+<pc class="text">Curiosity</p>
 
 </body>
 </html>
