--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <button>
   <span class="shadow"></span>
   <span class="edge"></span>
-  <span class="front text"> Click me
+  <span class="front text"><span class="text">Curiosity</span>
   </span>
 </button>
 <h1 class="text">Curiosity</h1>
