--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </span>
 </button>
 <h1 class="text">Curiosity</h1>
-<pc class="text">Curiosity</p>
+<h2 class="text">Unleash your potential with Curiosity – where innovation meets exploration! We’re a community that thrives on the power of questions, the spark of discovery, and the drive to break boundaries. Whether you're an entrepreneur, artist, scientist, or dreamer, Curiosity connects like-minded pioneers eager to push past the ordinary and into the extraordinary. Join us to ignite your creativity, challenge the status quo, and explore new possibilities. Let’s discover the future together. Be curious, be bold, and be part of something extraordinary. </h2>
 
 </body>
 </html>
