--- a/404.html
+++ b/404.html
@@ -3,29 +3,29 @@
 
 
 
-<script src="Script.js"></script>
+<script src="https://guinea1980-svg.github.io/ZYME/Script.js"></script>
 
 
 <link rel="stylesheet" href="https://guinea1980-svg.github.io/ZYME/Style.css">
-<title>ZYME</title>
+<title>ZYME Bad URL</title>
 <link rel="icon" href="https://guinea1980-svg.github.io/ZYME/Blitz.PNG">
 </head>
 <body class="container">
-	<div class="card" style="position: absolute; top: 150px; left: 50px;">
-  		<p class="text2" style="position: absolute; top: -50px; left: 20px;">Welcome to ZYME !!</p>
-		<p class="text3" style="color: white; font: 25px Arial, sans-serif; position: absolute; top: 70px; left: 20px;">ZYME is a Hub for all your avoiding school website blockers</p>
-		
-	</div>
-	<div class="topbar " style="position: fixed; top: 0px; left: 0px; height: 100px; width: inherit; background-image: linear-gradient(rgb(0 0 0), rgb(64 73 79)); border-bottom: 0.5em solid #353b3d;">
+<div class="topbar "style="position: absolute; top: 0px; left: 0px; height: 100px; width: inherit; background-image: linear-gradient(rgb(0 0 0), rgb(64 73 79)); border-bottom: 0.5em solid #353b3d;">
 		<div style="position: absolute;top: 20px;left: 400px;"> 
 			<button class="button1" style="float: left;" onclick="Redirect(&quot;https://guinea1980-svg.github.io/ZYME&quot;)"><span class="text">Home</span></button>
 			<button class="button1" style="float: left;" onclick="Redirect(&quot;https://guinea1980-svg.github.io/ZYME/Info&quot;)"><span class="text">Info</span></button>
-			<button class="button1" style="float: left;" onclick="Redirect(&quot;https://guinea1980-svg.github.io/ZYME/Utilities&quot;)"><span class="text">Utilities</span></button>
+			<button class="button1" style="float: left;" onclick="Redirect(&quot;https://guinea1980-svg.github.io/ZYME/Utilities&quot;)"><span class="text">Downloads</span></button>
 			<button class="button1" style="float: left;" onclick="Redirect(&quot;https://guinea1980-svg.github.io/ZYME/Proxies&quot;)"><span class="text">Proxies</span></button>
 			<button class="button1" style="float: left;" onclick="Redirect(&quot;https://guinea1980-svg.github.io/ZYME/Games&quot;)"><span class="text">Games</span></button>
 		</div>
 		
 		<div style="position: absolute;top: -10px;left:100px;"> <h1 class="text2">ZYME </h1> </div>  
-	</div>
+</div>
+<div style="position: absolute;top: 100px;"> <h1 class="text2">😢 We Could not Find This page 😢</h1> </div>
+
+
+
+
 
 </body></html>
