--- a/Proxies/index.html
+++ b/Proxies/index.html
@@ -22,22 +22,18 @@
 
 
 
-<div class="Card_1" style="position: absolute;top: 200px;left: 30px;">
-  		<p class="text2" style="position: absolute; top: -50px; left: 20px;">Interstellar</p>
-		<p id="Status" class="Status_Working" style="color: #00ff16;font: 35px Arial, sans-serif;position: absolute;top: 375px;left: 330px;"></p>
-		<p class="text3" style="color: white; font: 35px Arial, sans-serif; position: absolute; top: 70px; left: 20px;">This is One of the Best Proxies Out Right Now that isnt Blocked (This is Updated Everytime this Proxy is blocked!!)</p>
-		<button style="color: white;font: 30px Arial, sans-serif;height: 80px;text-decoration: none;width: 281px;" class="button_download" onclick="NewTabLink(&quot;https://iamsteve.raspberryip.com/&quot;)">VISIT WEBSITE</button>
-</div>
-<div id="Card_2" class="card" style="position: absolute;top: 200px;left: 660px;">
-		<p id="Status" class="Status_Working"
-			style="color: #00ff16;font: 35px Arial, sans-serif;position: absolute;top: 375px;left: 330px;"></p>
-		<p class="text2" style="position: absolute; top: -50px; left: 20px;"></p>
-		<p class="text3" style="color: white; font: 35px Arial, sans-serif; position: absolute; top: 70px; left: 20px;">
-			</p>
-		<button style="color: white;font: 30px Arial, sans-serif;height: 80px;text-decoration: none;width: 281px;"
-			class="button_download">Visit
-			Website</button>
-</div>
+<div id="Card_1" class="card" style="position: absolute;top: 200px;left: 30px;">
+		<p id="Status" class="Status_Working" style="color: #00ff16;font: 35px Arial, sans-serif;position: absolute;top: 375px;left: 330px;">Working ✔</p>
+		<p class="text2" style="position: absolute; top: -50px; left: 20px;">Kieron Virus</p>
+		<p class="text3" style="color: white; font: 35px Arial, sans-serif; position: absolute; top: 70px; left: 20px;">This is a Simple script that i made that will change every image in every website to a Brain Rot on (Visit the Info Section and follow the tutorial on how to install it</p>
+		<button style="color: white;font: 30px Arial, sans-serif;height: 80px;text-decoration: none;width: 281px;" class="button_download">VISIT WEBSITE</button>
+	</div>
+<div id="Card_2" class="card" style="position: absolute;top: 200px;left: 30px;">
+		<p id="Status" class="Status_Working" style="color: #00ff16;font: 35px Arial, sans-serif;position: absolute;top: 375px;left: 330px;">Working ✔</p>
+		<p class="text2" style="position: absolute; top: -50px; left: 20px;">Kieron Virus</p>
+		<p class="text3" style="color: white; font: 35px Arial, sans-serif; position: absolute; top: 70px; left: 20px;">This is a Simple script that i made that will change every image in every website to a Brain Rot on (Visit the Info Section and follow the tutorial on how to install it</p>
+		<button style="color: white;font: 30px Arial, sans-serif;height: 80px;text-decoration: none;width: 281px;" class="button_download">VISIT WEBSITE</button>
+	</div>
 <div class="topbar " style="width: 100%;position: fixed;top: 0px;left: 0px;height: 100;background-image: linear-gradient(rgb(0 0 0), rgb(64 73 79));border-bottom: 0.5em solid #353b3d;">
 		<div style="position: fixed;top: 20px;left: 425px;"> 
 			<button class="button1" style="float: left;" onclick="Redirect(&quot;https://guinea1980-svg.github.io/ZYME&quot;)"><span class="text">Home</span></button>
